# smartssd

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: client.cpp
host/: CMakeLists.txt
host/include/: lz4_p2p_dec.hpp
host/src/: lz4_p2p_comp.cpp  lz4_p2p_dec.cpp
kernel/: CMakeLists.txt  compress.ini  compression.ini
kernel/src/: lz4_p2p_decompress_kernel.cpp
